Fix artist summary partly hidden on narrow height viewports

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -357,6 +357,7 @@ code {
     top: 0;
     left: 0;
     bottom: 0;
+    overflow-y: scroll;
   }
 }
 
